# UBB-Y3S1

./: .gitignore
Crypto/Assignment3Helper/: CMakeLists.txt  main.cpp
Crypto/Crypto Lab 3 - RSA/: CMakeLists.txt  Documentation.txt  main.cpp
Crypto/Crypto Lab 3 - RSA 2/: Documentation.txt  RSA.h  RSAText.h
Crypto/Crypto Lab 3 - RSA 2/UI/: mainwindow.ui
Crypto/Crypto Lab 3 - RSA/UI/: mainwindow.cpp  mainwindow.h  ui_mainwindow.h
Crypto/Crypto Lab2 - Carmichel nrs/: CMakeLists.txt  main.cpp
FLCD/Lab1/: example.html  lang.txt  lang_ebnf.txt
FLCD/Lab1Part2/: documentation.txt  lang1.txt  lang2.txt  main.go
FLCD/Lab2/: doc.README  finiteAutomata.in  grammar.in  lang1.txt  main.go
FLCD/Lab3/: grammar.txt  lang_bnf.txt
FLCD/Lab5/: README.md  lex.yy.c  myscanner  myscanner.c  myscanner.h  myscanner.l  myscanner.tab.c  myscanner.tab.h  myscanner.y  myscanner_yacc.l
MA/QSkipper/app/: build.gradle
PDP/: Untitled.code-workspace
PDP/ExamPreparations/01Atomics/: CMakeLists.txt  main.cpp
PDP/ExamPreparations/02Mutexes/: CMakeLists.txt  main.cpp
PDP/ExamPreparations/03ConditionVariable/: CMakeLists.txt  main.cpp
PDP/ExamPreparations/Sample-Exam2018/: readme.md
PDP/ExamPreparations/Sample-Exam2018/01MPIQuickSort/: CMakeLists.txt  main.cpp
PDP/ExamPreparations/ScalarProduction/: CMakeLists.txt  main.cpp
PDP/ExamPreparations/SubsetsAgain/: CMakeLists.txt  main.cpp
PDP/LAB1/: CMakeLists.txt  main.cpp
PDP/LAB3/1.ThreadPoolInC++/: main.cpp
PDP/LAB3/2.AsyncAndFutureInC++/: CMakeLists.txt  main.cpp
PDP/LAB4/: CMakeLists.txt  main.cpp
PDP/LAB5/1.ParserOnCallback/: 1.ParserOnCallback.sln
PDP/LAB5/2.Tasks/: 2.Tasks.sln
PDP/LAB6/KaratsubaAlgorithm/: CMakeLists.txt  main.cpp
PDP/LAB6/NSquare/: CMakeLists.txt  main.cpp
PDP/LAB7/Prob1/: CMakeLists.txt  main.cpp
PDP/LAB7/Prob1V2/: CMakeLists.txt  main.cpp
PDP/LAB7/Prob2/: CMakeLists.txt  main.cpp
PDP/LAB8/: CMakeLists.txt  main.cpp
PDP/LAB9/: CMakeLists.txt  main.cpp
PDP/LAB9_Prob2/: CMakeLists.txt  main.cpp
PDP/Lab10/DSM_Library/: CMakeLists.txt  library.h
PDP/Lab2/MatrixAddition/: CMakeLists.txt  main.cpp
PDP/Lab2/MatrixMultiplication/: CMakeLists.txt  main.cpp
PDP/Lab9V2/: CMakeLists.txt
VR/LAB1/rt-incomplete-2/: Color.hpp  Geometry.hpp  Image.hpp  Intersection.hpp  Light.hpp  Line.hpp  Material.hpp  Scene.hpp  main.cpp  (+3 more)
VR/Lab2-3dRobot/: Assembly-CSharp.csproj  Lab2-3dRobot.sln
VR/Lab3-ShootingBricks/: Assembly-CSharp.csproj  Lab3-ShootingBricks.sln
(+150 files in other folders)
